# LinuxLngSwitcher

./: .gitignore  Cargo.toml  README.md  index.html  style.css
.github/workflows/: build.yml
docs/: index.html
extension/: extension.js  metadata.json
src/: config.rs  daemon.rs  gui.rs  main.rs
