[package]
name = "gnome-lng-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_8"] }
adw = { version = "0.5", package = "libadwaita" }
glib = "0.18"
gio = "0.18"
evdev = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.27", features = ["fs", "user", "process", "signal"] }
once_cell = "1.18"
